--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1 id="name">Trevor Moreau</h1>
             <h2 id="title">Software Developer</h2>
             <div id="contact-info">
-                <p>Pineville, LA | 318-880-1655 | trevormoreau13@gmail.com | <a href="https://linkedin.com/in/trevormoreau/" target="_blank">linkedin.com/in/trevormoreau/</a></p>
+                <p>Pineville, LA | trevormoreau13@gmail.com | <a href="https://linkedin.com/in/trevormoreau/" target="_blank">linkedin.com/in/trevormoreau/</a></p>
             </div>
         </div>
     </header>
@@ -89,21 +89,21 @@
                 <ul class="achievements">
                     <li>Architected and implemented cross-platform integration solutions enabling SameDayMed to interface with multiple pharmacy systems, expanding operations from 8 pharmacies in 1 state to 16 pharmacies across multiple states within 3 years</li>
                     <li>Enhanced system security by implementing role-based access control and data filtering, ensuring HIPAA compliance and protecting sensitive patient information</li>
-                    <li>Improved system performance by 40% through database optimization to 5NF and implementing efficient design patterns to reduce redundant logic and memory usage</li>
+                    <li>Improved system performance through database optimization to 5NF and implementing efficient design patterns to reduce redundant logic and memory usage</li>
                     <li>Designed and developed RESTful backend server with real-time tracking capabilities, enabling management to monitor driver locations and optimize delivery routes</li>
-                    <li>Integrated LINQ libraries for secure and efficient data access across all applications, reducing query execution time by 30%</li>
-                    <li>Redesigned user interfaces across multiple applications, increasing usability metrics and reducing training time for new employees by 25%</li>
-                    <li>Refactored 12+ legacy .NET/C# applications by applying modern design patterns, eliminating hardcoding to support dynamic addition of new pharmacies</li>
-                    <li>Created comprehensive documentation including code comments and system architecture diagrams, reducing onboarding time for new developers by 50%</li>
-                    <li>Developed analytics dashboard for management and operations teams, providing actionable insights that helped optimize profit margins by 15%</li>
+                    <li>Integrated LINQ libraries for secure and efficient data access across all applications, reducing query execution time</li>
+                    <li>Redesigned user interfaces across multiple applications, increasing usability metrics and reducing training time for new employees</li>
+                    <li>Refactored 12+ legacy .NET/C# applications by applying modern design patterns, eliminating hardcoding to support dynamic addition of new customers</li>
+                    <li>Created comprehensive documentation including code comments and system architecture diagrams, reducing onboarding time for new developers</li>
+                    <li>Developed analytics dashboard for management and operations teams, providing actionable insights that helped optimize profit margins</li>
                     <li>Built secure application for pharmacists to view prescription information with integrated Proof of Delivery functionality, improving accountability and reducing disputes</li>
-                    <li>Implemented version control using Git and GitHub, establishing CI/CD pipelines that reduced deployment errors by 80%</li>
-                    <li>Developed tools for efficient image management of customer orders, reducing processing time by 35%</li>
+                    <li>Implemented version control using Git and GitHub, establishing CI/CD pipelines that reduced deployment errors</li>
+                    <li>Developed tools for efficient image management of customer orders, reducing processing time</li>
                     <li>Implemented auto-renewing code-signing certificates, ensuring secure and trusted software distribution with zero downtime</li>
                     <li>Collaborated with external vendors to integrate third-party applications via RESTful APIs, enhancing system capabilities and meeting specific customer requirements</li>
                     <li>Enhanced data security by implementing encryption for data at rest and in transit, meeting industry compliance standards</li>
                     <li>Migrated system from Azure to on-premise infrastructure, reducing operational costs by 30% while maintaining performance</li>
-                    <li>Created AWS backup infrastructure for disaster recovery, ensuring business continuity with 99.9% uptime</li>
+                    <li>Created AWS backup infrastructure for disaster recovery, ensuring business continuity</li>
                     <li>Implemented Multi-Factor Authentication using DUO, strengthening security posture and meeting compliance requirements</li>
                 </ul>
             </div>
